[FIX] shadow logo on mobile #3

--- a/style.css
+++ b/style.css
@@ -163,6 +163,7 @@ body:not(.contact-page) {
 }
 /*======= LOGO NAVBAR sin sombra en el tap del movil ====== */
 .logo-nav__link,
+.logo-nav,
 .logo-nav__link img,
 .logo-nav__link span {
     -webkit-tap-highlight-color: transparent !important;
@@ -171,7 +172,7 @@ body:not(.contact-page) {
     -webkit-user-select: none;
     -webkit-touch-callout: none;
     -webkit-tap-highlight-color: rgba(0,0,0,0) !important;
-    -tap-highlight-color: transparent !important;
+    -webkit-tap-highlight-color: transparent !important;
 }
 .logo-nav__link:focus,
 .logo-nav__link:active {
